--- a/app/css/style.css
+++ b/app/css/style.css
@@ -67,7 +67,7 @@ h1 {
     margin-top: 0;
     margin-bottom: 20px;
     color: #fff;
-    font-size: 220%;
+    /*font-size: 220%;*/
     word-spacing: 4px;
     letter-spacing: 1px;
 }
@@ -214,7 +214,7 @@ header {
 
 .hero-text-box {
     position: absolute;
-    width: 1140px;
+    width: 100%;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
